tests/snapshots/asm__.__asm-test__float.s.snap
---
source: tests/asm.rs
expression: "&test_output"
---
stdout: "Parsed 12 nodes:\n0: Directive(Directive { name: \".text\", args: [] })\n1: Directive(Directive { name: \".globl\", args: [Symbol(\"test_float\")] })\n2: Label(\"test_float\")\n3: Instruction(Instruction { mnemonic: \"movss\", operands: [Register(Xmm0), Register(Xmm1)] })\n4: Instruction(Instruction { mnemonic: \"addss\", operands: [Register(Xmm1), Register(Xmm0)] })\n5: Instruction(Instruction { mnemonic: \"movsd\", operands: [Register(Xmm2), Register(Xmm3)] })\n6: Instruction(Instruction { mnemonic: \"mulsd\", operands: [Register(Xmm3), Register(Xmm2)] })\n7: Instruction(Instruction { mnemonic: \"flds\", operands: [Memory { displacement: 8, base: Some(Rbp), index: None, scale: 1, symbol: None }] })\n8: Instruction(Instruction { mnemonic: \"fldl\", operands: [Memory { displacement: 16, base: Some(Rbp), index: None, scale: 1, symbol: None }] })\n9: Instruction(Instruction { mnemonic: \"faddp\", operands: [Register(St0), Register(St1)] })\n10: Instruction(Instruction { mnemonic: \"fstpl\", operands: [Memory { displacement: -8, base: Some(Rbp), index: None, scale: 1, symbol: None }] })\n11: Instruction(Instruction { mnemonic: \"ret\", operands: [] })\n"
stderr: ""
status: 0
