tests/snapshots/asm__.__asm-test__simple.s.snap
---
source: tests/asm.rs
expression: "&test_output"
---
stdout: "Parsed 5 nodes:\n0: Directive(Directive { name: \".text\", args: [] })\n1: Directive(Directive { name: \".globl\", args: [Symbol(\"main\")] })\n2: Label(\"main\")\n3: Instruction(Instruction { mnemonic: \"mov\", operands: [Immediate(42), Register(Rax)] })\n4: Instruction(Instruction { mnemonic: \"ret\", operands: [] })\nSections:\n0: Section { name: \".text\", typ: ProgBits, flags: Some(\"ax\"), align: 1, size: 0 }\nSymbols:\n0: Symbol { name: \"main\", section: Some(0), value: 0, size: None, binding: Global, typ: NoType }\n"
stderr: ""
status: 0
